scrollbar: iron out some sync issues

--- a/src/scss/widgets/sliders.scss
+++ b/src/scss/widgets/sliders.scss
@@ -70,3 +70,8 @@
     }
 
 }
+
+.scrollbar-container {
+    --alpha-fill-off: 0;
+    --alpha-fill-on: var(--alpha-scrollbar);
+}
